# BeatShell

./: .gitignore  pyproject.toml
src/BeatShell/: main.py
src/BeatShell/app/: __init__.py  app.py  core.py
src/BeatShell/events/: __init__.py  event_handler.py
src/BeatShell/metadata/: __init__.py  metadata.py
src/BeatShell/ui/: __init__.py  constants.py  simplified.py
src/BeatShell/utils/: __init__.py  color.py
