[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BeatShell"
version = "0.0.1"
description = "A terminal based Audio Player"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ismael Dios Miguez", email = "idaxdm@gmail.com" },
    { name = "Aldan Lema Touza", email = "65aldan@gmail.com" }
]

# Essential dependencies for a Textual-based editor
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[project.scripts]
beatshell = "BeatShell.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
